@@ -3,4 +3,3 @@
 //  stdafx.obj will contain the pre-compiled type information
 
 #include "stdafx.h"
-#include "ComponentLib_i.c"
